--- a/src/scss/common/layout.scss
+++ b/src/scss/common/layout.scss
@@ -87,7 +87,6 @@
             display: flex;
             padding: 0.5em;
             min-height: calc(100vh - 4rem);
-            overflow: auto;
 
             // page for router view
             > div {
